# canokey-nrf52

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  nrf52840.ld  toolchain.cmake
config/: board_selection.h  mbedtls_config.h  nrfx_config.h  nrfx_glue.h  sdk_config.h  tusb_config.h
config/boards/makerdiary/: m2_dock.h
config/boards/nordic/: pca10059.h
include/: board.h  globals.h  lfs_init.h  nfc_dummy.h
include/boards/makerdiary/: m2_dock.h
nrf_sdk/: .gitignore  nRF5_SDK.cmake
src/: admin_vendor.c  board.c  device.c  globals.c  lfs_init.c  main.c  nfc_dummy.c  usb.c
utils/: device-config-init.sh
